# DataStructWithC

./: .gitignore  CMakeLists.txt  Readme.md  header.h  main.c
Array/: CMakeLists.txt
Array/DynamicArray/: Array.c  Array.h  CircularQueue.c  CircularQueue.h  DynamicQueue.c  DynamicQueue.h  DynamicStack.c  DynamicStack.h
Doc/: Array.md  LinerTable.md  Queue.md  Sorting.md  Stack.md  Tree.md
LinearTable/: CMakeLists.txt  LinkList.c  LinkList.h  ListTest.c  SLinkList.c  SLinkList.h  SqList.c  SqList.h  list.h
LinearTable/LinkList/: LinkList.c  LinkList.h  ListTest.c  ListTest.h  testReverseList.c
LinearTable/List/: LinkedList.c  list.h  test.c
LinearTable/SLinkList/: SLinkList.h
LinearTable/SqList/: SqList.c  SqList.h
Queue/: header.h  test.c
Queue/LinkQueue/: LinkQueue.h
Sorting/: CMakeLists.txt  header.h  test.c  test.h
Sorting/InsertionSort/: CMakeLists.txt  InsertionSort.c  InsertionSort.h  TestInsertionSort.c
Sorting/MergeSort/: CMakeLists.txt  Helper.h  InsertionSort.c  InsertionSort.h  MergeSort.c  MergeSort.h  TestMergeSort.c  header.h
Sorting/SelectionSort/: CMakeLists.txt  Helper.h  SelectionSort.c  SelectionSort.h  TestSelectionSort.c
Sorting/ShellSort/: CMakeLists.txt  ShellShort.c  ShellShort.h  TestShellSort.c
Sorting/SortTestHelper/: SortTestHelper.h  Template.c  Template.h
Sorting/Template/: Template.c
Sorting/TestSortAlgs/: SortTestHelper.h  test.c  test.h
Stack/: CMakeLists.txt  DualStack.c  LinkStack.c  LinkStack.h  LinkStack_test.c  LinkStack_test.h  Sq_Stack.c  Sq_Stack.h  Stack_test.c  Stack_test.h  test.c
Stack&&Queue/: CMakeLists.txt  Stack&&Queue.c
Stack&&Queue/Algs/: QueueAlgorithms.c  QueueAlgorithms.h
Stack&&Queue/DynamicArray/: Array.c  Array.h
Stack&&Queue/Queue/: test.c
Stack&&Queue/Queue/QueueWithStack/: QueueWithStack.c  QueueWithStack.h
Stack&&Queue/Queue/SqQueue/: SqQueue.c  SqQueue.h
Stack&&Queue/Queue/TagQueue/: TagQueue.c  TagQueue.h
Stack&&Queue/Stack/: ArrayStack.c  ArrayStack.h  CMakeLists.txt  stack.h  test.c
Stack&&Queue/Stack/DualStack/: DualStack.h
Stack&&Queue/Stack/LinkStack/: LinkStack.h  LinkStack_test.h
Stack&&Queue/Stack/Sq_Stack/: Sq_Stack.h  Stack_test.h  stack.c  stack.h
Stack&&Queue/Stack/list/: LinkList.c
Stack/LinkStack/: LinkStack.c  LinkStack.h
Stack/Sq_Stack/: Sq_Stack.h
Stack/list/: LinkList.h
Tree/: header.h  test.c  test.h
Tree/Binary-Search-Tree/: BST.c  BST.h
Tree/BinaryTree/: BinarySearchTree.c  BinarySearchTree.h  BinaryTree.c  BinaryTree.h  TreeNode.h
Tree/BinaryTree/LinkQueue/: LinkQueue.c  LinkQueue.h
Tree/Stack/: t_stack.c
